--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hexagonn's CDN Website</title>
+    <title>MiexCloud Offline.</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -12,14 +12,7 @@
     <body class="bg-purple">
       <div class="stars">
         <div class="central-body">
-          <img
-            src="./def-assets/img1.png"
-            alt="wait where are we?"
-            width="500px"
-          />
-          <a href="https://hexagonn.my.id/" class="btn-go-home" target="_blank"
-            >Back</a
-          >
+          <h2 class="ggsans-font">MiexCloud Offline!</h2>
         </div>
         <div class="objects">
           <img
