--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MiexCloud Offline.</title>
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://ggsans.therealzzy.xyz/ggsans.css" />
   </head>
   <body>
     <body class="bg-purple">
