--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="bg-purple">
       <div class="stars">
         <div class="central-body">
-          <h2 class="ggsans-font">MiexCloud Offline!</h2>
+          <h1>MiexCloud Offline!</h1>
         </div>
         <div class="objects">
           <img
